[package]
name = "biblio"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"]}
serde_json = "1.0.139"
serde = "1.0.218"
lopdf = "0.35.0"
dotenv = "0.15.0"
google-generative-ai-rs = { version = "0.3.4", features = ["beta"] }
